--- a/leprikon/templates/leprikon/leader_preview.html
+++ b/leprikon/templates/leprikon/leader_preview.html
@@ -7,14 +7,14 @@
 
     <div class="box-content">
         {% if object.photo %}
-        <div class="col-sm-9">
+        <div class="col-md-9">
         {% endif %}
         {{ object.description | safe }}
         {% for group in object.get_subjects_by_types %}
         {% if group.subjects|filter_current_school_year:request.school_year %}
         <div class="row">
-            <label class="col-sm-3">{{ group.subject_type.plural }}:</label>
-            <div class="col-sm-6">
+            <label class="col-md-3">{{ group.subject_type.plural }}:</label>
+            <div class="col-md-6">
                 {% for subject in group.subjects|filter_current_school_year:request.school_year %}
                 <a href="{{ subject.get_absolute_url }}">{{ subject.name }}</a><br />
                 {% endfor %}
@@ -25,8 +25,8 @@
 
         {% if object.all_public_contacts %}
         <div class="row">
-            <label class="col-sm-3">{% trans 'Contact' %}:</label>
-            <div class="col-sm-6">
+            <label class="col-md-3">{% trans 'Contact' %}:</label>
+            <div class="col-md-6">
                 {% for contact in object.all_public_contacts %}
                 <div class="contact contact-{{ contact.contact_type }}">
                     {{ contact.contact }}
@@ -46,7 +46,7 @@
         {% endif %}
         {% if object.photo %}
         </div>
-        <div class="col-sm-3">
+        <div class="col-md-3">
             <a href="{% thumbnail object.photo 1500x1500 %}" data-toggle="lightbox" data-title="{{ object.photo.name }}">
                 <img class="right" alt="{{ object.photo.name }}" src="{% thumbnail object.photo 200x200 %}" />
             </a>
