--- a/leprikon/templates/leprikon/list.html
+++ b/leprikon/templates/leprikon/list.html
@@ -15,7 +15,7 @@
 
 {% if add_url %}
 <a class="btn btn-sm btn-primary right" href="{{ add_url }}" title="{{ add_title }}">
-    <span class="glyphicon glyphicon-plus"></span>
+    <i class="fas fa-plus"></i>
     {{ add_label }}
 </a>
 {% endif %}
