--- a/leprikon/templates/leprikon/messagerecipient_detail.html
+++ b/leprikon/templates/leprikon/messagerecipient_detail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<a class="btn btn-sm btn-default" href="{{ back_url }}">{{ back_label }}</a>
+<a class="btn btn-sm btn-secondary" href="{{ back_url }}">{{ back_label }}</a>
 
 <h1>{% block title %}{{ messagerecipient.message.subject }}{% endblock %}</h1>
 
