--- a/leprikon/templates/leprikon/parent_preview.html
+++ b/leprikon/templates/leprikon/parent_preview.html
@@ -15,8 +15,8 @@
 
     <div class="box-content">
         <div class="row">
-            <label class="col-sm-4">Kontakt:</label>
-            <div class="col-sm-8">
+            <label class="col-md-4">Kontakt:</label>
+            <div class="col-md-8">
                 {{ object.address }}<br/>
                 email: {{ object.email }} telefon: {{ object.phone }}
             </div>
