--- a/leprikon/templates/leprikon/participants.html
+++ b/leprikon/templates/leprikon/participants.html
@@ -7,7 +7,7 @@
 <h2>{% trans 'Parents' %}</h2>
 
 <a class="btn btn-sm btn-primary right" href="{% url_with_back 'leprikon:parent_create' %}">
-    <span class="glyphicon glyphicon-plus"></span>
+    <i class="fas fa-plus"></i>
     {% trans 'add parent' %}
 </a>
 
