--- a/leprikon/templates/leprikon/static/bootstrap-multiselect.html
+++ b/leprikon/templates/leprikon/static/bootstrap-multiselect.html
@@ -1,10 +1,10 @@
 {% load sekizai_tags staticfiles %}
 
 {% addtoblock "css" %}
-<link rel="stylesheet" href="{% static 'leprikon/lib/bootstrap-multiselect.css' %}"/>
+<link rel="stylesheet" href="{% static 'leprikon/lib/bootstrap-multiselect/css/bootstrap-multiselect.css' %}"/>
 {% endaddtoblock %}
 
 {% addtoblock "js" %}
-<script src="{% static 'leprikon/lib/bootstrap-multiselect.min.js' %}"></script>
+<script src="{% static 'leprikon/lib/bootstrap-multiselect/js/bootstrap-multiselect.js' %}"></script>
 {% endaddtoblock %}
 
