--- a/leprikon/templates/leprikon/static/ekko-lightbox.html
+++ b/leprikon/templates/leprikon/static/ekko-lightbox.html
@@ -1,9 +1,9 @@
 {% load sekizai_tags staticfiles %}
 
 {% addtoblock 'css' %}
-<link rel="stylesheet" href="{% static 'leprikon/lib/ekko-lightbox.min.css' %}"/>
+<link rel="stylesheet" href="{% static 'leprikon/lib/ekko-lightbox/ekko-lightbox.css' %}"/>
 {% endaddtoblock %}
 
 {% addtoblock 'js' %}
-<script src="{% static 'leprikon/lib/ekko-lightbox.min.js' %}"></script>
+<script src="{% static 'leprikon/lib/ekko-lightbox/ekko-lightbox.min.js' %}"></script>
 {% endaddtoblock %}
