--- a/leprikon/templates/leprikon/confirm_form.html
+++ b/leprikon/templates/leprikon/confirm_form.html
@@ -17,11 +17,11 @@
     <input type="hidden" name="answer" value="yes"/>
 
     <!-- SUBMIT -->
-    <div class="form-group">
-        <div class="col-md-9 col-md-offset-3">
+    <div class="form-group row">
+        <div class="col-lg-9 offset-lg-3">
             <button class="btn btn-primary" type="submit">{{ submit_label }}</button>
             {% if back_url %}
-            <a class="btn btn-default" href="{{ back_url }}">{{ back_label }}</a>
+            <a class="btn btn-secondary" href="{{ back_url }}">{{ back_label }}</a>
             {% endif %}
         </div>
     </div>
