--- a/leprikon/templates/leprikon/filtered_subject_list.html
+++ b/leprikon/templates/leprikon/filtered_subject_list.html
@@ -2,18 +2,18 @@
 
 <form class="form-horizontal" method="get" id="list_filter_form">
 
-    <div class="form-group">
+    <div class="form-group row">
         {% for item in form %}
-        <label class="control-label col-sm-6 col-md-2" for="{{ item.id_for_label }}">
+        <label class="col-form-label col-md-6 col-lg-2" for="{{ item.id_for_label }}">
             {{ item.label }}
         </label>
-        <div class="col-sm-6 col-md-4{% if item.errors %} alert alert-danger{% endif %}">
+        <div class="col-md-6 col-lg-4{% if item.errors %} alert alert-danger{% endif %}">
             {{ item }}
         </div>
         {% endfor %}
-        <div class="col-xs-12 right">
+        <div class="col-12 right">
             <button class="btn btn-primary" type="submit">{% trans 'search' %}</button>
-            <a class="btn btn-default" href="{{ request.path }}">{% trans 'cancel search' %}</a>
+            <a class="btn btn-secondary" href="{{ request.path }}">{% trans 'cancel search' %}</a>
         </div>
     </div>
 </form>
