--- a/leprikon/templates/leprikon/form_inline_item.html
+++ b/leprikon/templates/leprikon/form_inline_item.html
@@ -1,5 +1,5 @@
 <td class="form-group {{ item.css_classes }}">
-    <div class="control-label{% if item.errors %} alert alert-danger{% endif %}">
+    <div class="col-form-label{% if item.errors %} alert alert-danger{% endif %}">
         {{ item }}
         {% for error in item.errors %}
             {{ error }}<br/>
