--- a/leprikon/templates/leprikon/participant_preview.html
+++ b/leprikon/templates/leprikon/participant_preview.html
@@ -4,7 +4,7 @@
         <strong>{{ object.full_name }}</strong>
         <small>({{ object.birth_date }})</small>
         <a class="btn btn-primary btn-xs" href="{% url_with_back 'leprikon:participant_update' object.id %}">
-            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+            <i class="fas fa-edit" aria-hidden="true"></i>
             {% trans 'edit' %}
         </a>
         <a class="btn btn-primary btn-xs" href="{% url_with_back 'leprikon:participant_delete' object.id %}">
@@ -15,32 +15,32 @@
 
     <div class="box-content">
         <div class="row">
-            <label class="col-sm-4">{% trans 'Age group' %}:</label>
-            <div class="col-sm-8">
+            <label class="col-md-4">{% trans 'Age group' %}:</label>
+            <div class="col-md-8">
                 {{ object.age_group }}
             </div>
         </div>
         <div class="row">
-            <label class="col-sm-4">{% trans 'Address' %}:</label>
-            <div class="col-sm-8">
+            <label class="col-md-4">{% trans 'Address' %}:</label>
+            <div class="col-md-8">
                 {{ object.address }}
             </div>
         </div>
         <div class="row">
-            <label class="col-sm-4">{% trans 'Contact' %}:</label>
-            <div class="col-sm-8">
+            <label class="col-md-4">{% trans 'Contact' %}:</label>
+            <div class="col-md-8">
                 {{ object.contact }}
             </div>
         </div>
         <div class="row">
-            <label class="col-sm-4">{% trans 'School' %}:</label>
-            <div class="col-sm-8">
+            <label class="col-md-4">{% trans 'School' %}:</label>
+            <div class="col-md-8">
                 {{ object.school_and_class }}
             </div>
         </div>
         <div class="row">
-            <label class="col-sm-4">{% trans 'Health' %}:</label>
-            <div class="col-sm-8">
+            <label class="col-md-4">{% trans 'Health' %}:</label>
+            <div class="col-md-8">
                 {{ object.health | linebreaks }}
             </div>
         </div>
