--- a/leprikon/templates/leprikon/registration_payments.html
+++ b/leprikon/templates/leprikon/registration_payments.html
@@ -1,8 +1,8 @@
 {% load i18n leprikon_tags qr_code %}
 
 <div class="row">
-    <label class="col-sm-4">{% trans 'Price' %}:</label>
-    <div class="col-sm-8">
+    <label class="col-md-4">{% trans 'Price' %}:</label>
+    <div class="col-md-8">
         {{ reg.price | currency }}
         {% if reg.subject.course.school_year_division.period_name %} / {{ reg.subject.course.school_year_division.period_name }}{% endif %}
         {% if reg.subject_variant %}({{ reg.subject_variant.name }}){% endif %}
