--- a/leprikon/templates/leprikon/reports/index.html
+++ b/leprikon/templates/leprikon/reports/index.html
@@ -18,9 +18,9 @@
 
     <form action="{{ report.url }}" method="get" class="form-horizontal">
         {% for ro in report.form.readonly_fields %}
-        <div class="form-group">
-            <label class="control-label col-md-3">{{ ro.label }}:</label>
-            <div class="col-md-9">
+        <div class="form-group row">
+            <label class="col-form-label col-lg-3">{{ ro.label }}:</label>
+            <div class="col-lg-9">
                 <div class="form-control">{{ ro.value }}</div>
             </div>
         </div>
@@ -31,8 +31,8 @@
         {% endfor %}
 
         <!-- SUBMIT -->
-        <div class="form-group">
-            <div class="col-md-9 col-md-offset-3">
+        <div class="form-group row">
+            <div class="col-lg-9 offset-lg-3">
                 <button class="btn btn-primary" type="submit">{% trans 'Show' %}</button>
             </div>
         </div>
