--- a/leprikon/templates/leprikon/widgets/input_option.html
+++ b/leprikon/templates/leprikon/widgets/input_option.html
@@ -1,6 +1,6 @@
 <div class="row select">
-    <div class="col-md-1 right">{% include "django/forms/widgets/input.html" %}</div>
-    <div class="col-md-11">
+    <div class="col-lg-1 right">{% include "django/forms/widgets/input.html" %}</div>
+    <div class="col-lg-11">
         <label class="form-control"{% if widget.attrs.id %} for="{{ widget.attrs.id }}"{% endif %}>{{ widget.label }}</label>
     </div>
 </div>
