--- a/leprikon/templates/leprikon/event_registrations.html
+++ b/leprikon/templates/leprikon/event_registrations.html
@@ -3,14 +3,14 @@
 
 {% block content %}
 
-<h1>{% block title %}{% blocktrans with name=event.name %}Registrations for {{ event.subject_type.name_akuzativ }} {{ name }}{% endblocktrans %}{% endblock %}</h1>
+<h1>{% block title %}{% blocktrans with subject_type=event.subject_type.name_akuzativ name=event.name %}Registrations for {{ subject_type }} {{ name }}{% endblocktrans %}{% endblock %}</h1>
 
 <h2>{% trans 'Active Registrations' %}</h2>
 
 {% for reg in event.all_approved_registrations %}
 {% include 'leprikon/registration_details.html' with reg=reg.eventregistration %}
 {% empty %}
-<p>{% trans 'There are no active registrations for this event.' %}</p>
+<p>{% blocktrans with subject_type=event.subject_type.name_akuzativ %}There are no active registrations for this {{ subject_type }}.{% endblocktrans %}</p>
 {% endfor %}
 
 {% if event.all_unapproved_registrations %}
