--- a/leprikon/templates/leprikon/registration_details.html
+++ b/leprikon/templates/leprikon/registration_details.html
@@ -5,6 +5,14 @@
     </div>
 
     <div class="box-content">
+        {% if reg.start_date %}
+        <div class="row">
+            <label class="col-sm-4">{% trans 'Event date' %}:</label>
+            <div class="col-sm-8">
+                {{ reg.event_date }}
+            </div>
+        </div>
+        {% endif %}
         <div class="row">
             <label class="col-sm-4">{% trans 'Status' %}:</label>
             <div class="col-sm-8">
